kubernetes/apps/dev/forgejo/runner/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo-runner
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/managed-by: forgejo-runner
  enableDefaultDeny:
    ingress: true
  egress:
    - # DNS
      toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - # Forgejo server
      toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: forgejo
      toPorts:
        - ports:
            - protocol: TCP
              port: "3000"
    - # Forgejo runner controller
      toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: forgejo-runner
      toPorts:
        - ports:
            - protocol: TCP
              port: "38809"
    - # Forgejo runner cache & proxy
      toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: forgejo-runner
      toPorts:
        - ports:
            - port: "8088"
              protocol: TCP
            - port: "8089"
              protocol: TCP
    - # Konflate
      toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: konflate
            k8s:io.kubernetes.pod.namespace: flux-system
      toPorts:
        - ports:
            - protocol: TCP
              port: "8080"
    - # Hairpinned in-cluster external services
      toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-external
    - # Internet egress
      toCIDRSet:
        - cidrGroupRef: internet
      toPorts:
        - ports:
            - protocol: TCP
              port: "80"
            - protocol: TCP
              port: "443"
